<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp"
    android:fitsSystemWindows="true"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/singUpActivityBar"
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:layout_marginTop="0dp"
                android:background="@color/barColor"

                >

                <ImageView

                    android:id="@+id/signUpBackButton"
                    android:layout_width="35dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:padding="7dp"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/sign_upButton"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


            </LinearLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="250dp"
                android:layout_height="130dp"
                android:layout_below="@id/singUpActivityBar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:src="@drawable/chat1" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/image"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edt_backgroung"
                android:hint="@string/nameHint"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/edt_userID"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/edt_name"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edt_backgroung"
                android:hint="@string/user_idHint"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/edt_userID"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edt_backgroung"
                android:hint="@string/emailHint"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/edt_paswword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/edt_email"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edt_backgroung"
                android:hint="@string/passwordHint"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:paddingStart="10dp" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_paswword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_background"
                android:text="@string/sign_upButton"
                android:textColor="@color/white"
                android:textColorHighlight="@color/black"/>



        </RelativeLayout>

    </ScrollView>


</RelativeLayout>