<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/FragmentHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/FragmentEdt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/FragmentHeading"
        android:layout_marginStart="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_background_fragment"
        android:inputType="text"
        android:maxLines="1"
        android:focusable="true"
        android:paddingStart="5dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="20sp"

        />

    <TextView
        android:id="@+id/FragmentSave"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@id/FragmentEdt"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15sp"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/teal_200"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/FragmentCancel"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@id/FragmentEdt"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15sp"
        android:gravity="center"
        android:text="@string/cancle"
        android:textColor="@color/Gray"
        android:textSize="18sp" />




    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/FragmentEdt"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15sp"
        android:background="?android:attr/selectableItemBackground"
        android:focusableInTouchMode="false"
        android:text="@string/save"
        android:textColor="@color/teal_200" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/FragmentEdt"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="15sp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/cancle"
        android:textColor="@color/Gray" />

        -->




</RelativeLayout>